# cessda.ai.mcp.openaire

./: .dockerignore  .env.http.example  .gitignore  AI_USAGE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.http  QUICKSTART.md  README.md  claude_desktop_config.example.json  docker-compose.yml  pyproject.toml  setup_virtualenv.sh  test_api.py
src/mcp_openaire/: __init__.py  config.py  logging_config.py  server.py  server_http.py  tools.py
